# pdm-venv

./: .copier-answers.yml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  noxfile.py  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  doc.yml  release.yml
changelog/: index.html
code_of_conduct/: index.html
contributing/: index.html
docs/: mkdocs.yml
news/: #10.bugfix.md  #21.feature.md  1.feature.md  14.bugfix.md  18.bugfix.md  2.feature.md  20.feature.md  25.bugfix.md  32.bugfix.md  35.feature.md
search/: search_index.json
src/pdm_venv/: __init__.py  backends.py  config.py  plugin.py  utils.py
src/pdm_venv/commands/: __init__.py  activate.py  create.py  list.py  prune.py  purge.py  remove.py
tests/: __init__.py  conftest.py  test_backends.py  test_commands.py  test_core.py  test_project.py  test_utils.py
